--- a/index.html
+++ b/index.html
@@ -73,14 +73,7 @@
               <form name="form-signup" autocomplete="on" novalidate class="signup">
                 <label for="name" class="label">Имя</label>
                 <div class="input-pos-div">
-                  <input
-                    type="text"
-                    name="name"
-                    id="name"
-                    class="input"
-                    placeholder=" "
-                    autofocus
-                  />
+                  <input type="text" id="name" class="input" placeholder=" " autofocus />
                   <svg class="pos-svg name">
                     <use href="./images/icons.svg#icon-name12-12"></use>
                   </svg>
@@ -101,23 +94,16 @@
                 </div>
                 <label for="comment" class="label">Комментарий</label>
                 <textarea
-                  name="comment"
                   rows="5"
                   placeholder="Введите текст"
                   id="comment"
                   class="comment"
                 ></textarea>
                 <div class="checkbox-div">
-                  <input
-                    type="checkbox"
-                    name="checkbox"
-                    id="id-checkbox"
-                    class="checkbox visually-hidden"
-                    value="checked"
-                  />
+                  <input type="checkbox" id="id-checkbox" class="checkbox visually-hidden" />
                   <label class="checkbox-custom" for="id-checkbox">
                     <svg class="checkbox-custom-svg">
-                      <use href="./images/icons.svg#icon-checka"></use>
+                      <use href="./images/icons.svg#icon-check16-15"></use>
                     </svg>
                   </label>
                   <span class="checkbox-span"
