--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                   class="comment"
                 ></textarea>
                 <div class="checkbox-div">
-                  <input type="checkbox" id="id-checkbox" class="checkbox visually-hidden" />
-                  <label class="checkbox-custom" for="id-checkbox">
+                  <label
+                    ><input type="checkbox" class="checkbox visually-hidden" />
                     <svg class="checkbox-custom-svg">
                       <use href="./images/icons.svg#icon-check16-15"></use>
                     </svg>
