--- a/portfolio.html
+++ b/portfolio.html
@@ -299,7 +299,7 @@
           <div class="footer-input-button-div">
             <input type="text" placeholder="E-mail" class="footer-input" />
             <button type="submit" class="footer-submit-button">
-              <p class="footer-submit-button-p">Подписаться</p>
+              <span class="footer-submit-button-span">Подписаться</span>
               <svg class="footer-submit-svg"><use href="./images/icons.svg#icon-send"></use></svg>
             </button>
           </div>
