bem header portfolio sync

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,35 +18,35 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <div class="header-container">
-        <nav class="nav-container">
-          <a href="" class="logo link logo-header"
-            ><span class="logo-accent-color">Web</span>Studio</a
+    <header class="header">
+      <div class="header__container">
+        <nav class="header__nav">
+          <a href="" class="header__logo"
+            ><span class="header__logo header__logo--accent-color">Web</span>Studio</a
           >
-          <ul class="list nav-menu">
-            <li class="nav-menu-li">
-              <a href="./index.html" class="link primary-text-color">Студия</a>
+          <ul class="header__menu">
+            <li class="header__li">
+              <a href="./index.html" class="header__current header__current--inverse">Студия</a>
             </li>
-            <li class="nav-menu-li">
-              <a href="./portfolio.html" class="link current primary-text-color">Портфолио</a>
+            <li class="header__li">
+              <a href="./portfolio.html" class="header__current">Портфолио</a>
             </li>
-            <li class="nav-menu-li">
-              <a href="" class="link primary-text-color">Контакты</a>
+            <li class="header__li">
+              <a href="" class="header__current header__current--inverse">Контакты</a>
             </li>
           </ul>
         </nav>
-        <ul class="list mail-tel">
-          <li class="mail-tel-li">
-            <a href="mailto:info@devstudio.com" class="mailto-a"
-              ><svg class="mailto-icon-svg">
+        <ul class="header__mail-tel">
+          <li class="header__li">
+            <a href="mailto:info@devstudio.com" class="header__href"
+              ><svg class="header__icon">
                 <use href="./images/icons.svg#icon-envelope1"></use></svg
               >info@devstudio.com</a
             >
           </li>
-          <li class="mail-tel-li">
-            <a href="tel:+380961111111" class="tel-a"
-              ><svg class="tel-icon-svg">
+          <li class="header__li">
+            <a href="tel:+380961111111" class="header__href"
+              ><svg class="header__icon--tel">
                 <use href="./images/icons.svg#icon-smartphone1"></use></svg
               >+38 096 111 11 11</a
             >
