--- a/portfolio.html
+++ b/portfolio.html
@@ -26,13 +26,15 @@
           >
           <ul class="header__menu">
             <li class="header__li">
-              <a href="./index.html" class="header__current header__current--inverse">Студия</a>
+              <a href="./index.html" class="header__current">Студия</a>
             </li>
             <li class="header__li">
-              <a href="./portfolio.html" class="header__current">Портфолио</a>
+              <a href="./portfolio.html" class="header__current header__current--color"
+                >Портфолио</a
+              >
             </li>
             <li class="header__li">
-              <a href="" class="header__current header__current--inverse">Контакты</a>
+              <a href="" class="header__current">Контакты</a>
             </li>
           </ul>
         </nav>
