--- a/index.html
+++ b/index.html
@@ -117,51 +117,51 @@
           </div>
         </div>
       </section>
-      <section class="no-padding-bottom">
+      <section class="section section--padding">
         <div class="container">
           <h2 class="visually-hidden">Наши особенности</h2>
-          <ul class="list ul-our-features">
-            <li class="li-our-features">
-              <div class="li-our-features-svg-div">
-                <svg class="li-our-features-svg">
+          <ul class="features__ul">
+            <li class="features__li">
+              <div class="features__div">
+                <svg class="features__svg">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="index-h3-our-features">Внимание к деталям</h3>
-              <p class="index-p-our-features">
+              <h3 class="features__h3">Внимание к деталям</h3>
+              <p class="features__p">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
-            <li class="li-our-features">
-              <div class="li-our-features-svg-div">
-                <svg class="li-our-features-svg">
+            <li class="features__li">
+              <div class="features__div">
+                <svg class="features__svg">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="index-h3-our-features">Пунктуальность</h3>
-              <p class="index-p-our-features">
+              <h3 class="features__h3">Пунктуальность</h3>
+              <p class="features__p">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
-            <li class="li-our-features">
-              <div class="li-our-features-svg-div">
-                <svg class="li-our-features-svg">
+            <li class="features__li">
+              <div class="features__div">
+                <svg class="features__svg">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="index-h3-our-features">Планирование</h3>
-              <p class="index-p-our-features">
+              <h3 class="features__h3">Планирование</h3>
+              <p class="features__p">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
-            <li class="li-our-features">
-              <div class="li-our-features-svg-div">
-                <svg class="li-our-features-svg">
+            <li class="features__li">
+              <div class="features__div">
+                <svg class="features__svg">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="index-h3-our-features">Современные технологии</h3>
-              <p class="index-p-our-features">
+              <h3 class="features__h3">Современные технологии</h3>
+              <p class="features__p">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
               </p>
             </li>
@@ -170,64 +170,64 @@
       </section>
       <section class="section">
         <div class="container">
-          <h2 class="index-h2-what-we-do">Чем мы занимаемся</h2>
-          <ul class="list ul-what-we-do">
-            <li class="li-what-we-do">
-              <div class="we-do-div">
+          <h2 class="we-do__h2">Чем мы занимаемся</h2>
+          <ul class="we-do__ul">
+            <li class="we-do__li">
+              <div class="we-do__div">
                 <img src="./images/index/1.jpg" alt="фото чем мы занимаемся 1" width="370" />
 
-                <p class="we-do-p">Десктопные приложения</p>
+                <p class="we-do__p">Десктопные приложения</p>
               </div>
             </li>
-            <li class="li-what-we-do">
-              <div class="we-do-div">
+            <li class="we-do__li">
+              <div class="we-do__div">
                 <img src="./images/index/2.jpg" alt="фото чем мы занимаемся 2" width="370" />
-                <p class="we-do-p">Мобильные приложения</p>
+                <p class="we-do__p">Мобильные приложения</p>
               </div>
             </li>
-            <li class="li-what-we-do">
-              <div class="we-do-div">
+            <li class="we-do__li">
+              <div class="we-do__div">
                 <img src="./images/index/3.jpg" alt="фото чем мы занимаемся 3" width="370" />
-                <p class="we-do-p">Дизайнерские решения</p>
+                <p class="we-do__p">Дизайнерские решения</p>
               </div>
             </li>
           </ul>
         </div>
       </section>
-      <section class="bg-color-team section">
+      <section class="section section--color">
         <div class="container">
-          <h2 class="index-h2-our-team">Наша команда</h2>
-          <ul class="list ul-team">
-            <li class="li-team">
+          <h2 class="team__h2">Наша команда</h2>
+          <ul class="team__ul">
+            <li class="team__li">
               <img src="./images/index/4.jpg" alt="фото Игорь Демьяненко" width="270" />
-              <div class="index-h3-p-member-of-team-div">
-                <h3 class="index-h3-member-of-team">Игорь Демьяненко</h3>
-                <p class="index-p-member-of-team">Product Designer</p>
-                <ul class="index-member-of-team-ul-links list">
-                  <li class="index-member-of-team-li-links">
-                    <a href="" class="team-links">
-                      <svg class="index-member-of-team-svg-links">
+              <div class="team__div">
+                <h3 class="team__h3">Игорь Демьяненко</h3>
+                <p class="team__p">Product Designer</p>
+                <ul class="team__cardset">
+                  <li class="team__item">
+                    <a href="" class="team__link">
+                      <svg class="team__svg">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="index-member-of-team-li-links">
-                    <a href="" class="team-links">
-                      <svg class="index-member-of-team-svg-links">
+                  <li class="team__item">
+                    <a href="" class="team__link">
+                      <svg class="team__svg">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="index-member-of-team-li-links">
-                    <a href="" class="team-links">
-                      <svg class="index-member-of-team-svg-links">
+                  <li class="team__item">
+                    <a href="" class="team__link">
+                      <svg class="team__svg">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="index-member-of-team-li-links">
-                    <a href="" class="team-links">
-                      <svg class="index-member-of-team-svg-links">
+                  <li class="team__item">
+                    <a href="" class="team__link">
+                      <svg class="team__svg">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -235,36 +235,36 @@
                 </ul>
               </div>
             </li>
-            <li class="li-team">
+            <li class="team__li">
               <img src="./images/index/5.jpg" alt="фото Ольга Репина" width="270" />
-              <div class="index-h3-p-member-of-team-div">
-                <h3 class="index-h3-member-of-team">Ольга Репина</h3>
-                <p class="index-p-member-of-team">Frontend Developer</p>
-                <ul class="index-member-of-team-ul-links list">
-                  <li class="index-member-of-team-li-links">
-                    <a href="" class="team-links">
-                      <svg class="index-member-of-team-svg-links">
+              <div class="team__div">
+                <h3 class="team__h3">Ольга Репина</h3>
+                <p class="team__p">Frontend Developer</p>
+                <ul class="team__cardset">
+                  <li class="team__item">
+                    <a href="" class="team__link">
+                      <svg class="team__svg">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="index-member-of-team-li-links">
-                    <a href="" class="team-links">
-                      <svg class="index-member-of-team-svg-links">
+                  <li class="team__item">
+                    <a href="" class="team__link">
+                      <svg class="team__svg">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="index-member-of-team-li-links">
-                    <a href="" class="team-links">
-                      <svg class="index-member-of-team-svg-links">
+                  <li class="team__item">
+                    <a href="" class="team__link">
+                      <svg class="team__svg">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="index-member-of-team-li-links">
-                    <a href="" class="team-links">
-                      <svg class="index-member-of-team-svg-links">
+                  <li class="team__item">
+                    <a href="" class="team__link">
+                      <svg class="team__svg">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -272,36 +272,36 @@
                 </ul>
               </div>
             </li>
-            <li class="li-team">
+            <li class="team__li">
               <img src="./images/index/6.jpg" alt="фото Николай Тарасов" width="270" />
-              <div class="index-h3-p-member-of-team-div">
-                <h3 class="index-h3-member-of-team">Николай Тарасов</h3>
-                <p class="index-p-member-of-team">Marketing</p>
-                <ul class="index-member-of-team-ul-links list">
-                  <li class="index-member-of-team-li-links">
-                    <a href="" class="team-links">
-                      <svg class="index-member-of-team-svg-links">
+              <div class="team__div">
+                <h3 class="team__h3">Николай Тарасов</h3>
+                <p class="team__p">Marketing</p>
+                <ul class="team__cardset">
+                  <li class="team__item">
+                    <a href="" class="team__link">
+                      <svg class="team__svg">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="index-member-of-team-li-links">
-                    <a href="" class="team-links">
-                      <svg class="index-member-of-team-svg-links">
+                  <li class="team__item">
+                    <a href="" class="team__link">
+                      <svg class="team__svg">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="index-member-of-team-li-links">
-                    <a href="" class="team-links">
-                      <svg class="index-member-of-team-svg-links">
+                  <li class="team__item">
+                    <a href="" class="team__link">
+                      <svg class="team__svg">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="index-member-of-team-li-links">
-                    <a href="" class="team-links">
-                      <svg class="index-member-of-team-svg-links">
+                  <li class="team__item">
+                    <a href="" class="team__link">
+                      <svg class="team__svg">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -309,36 +309,36 @@
                 </ul>
               </div>
             </li>
-            <li class="li-team">
+            <li class="team__li">
               <img src="./images/index/7.jpg" alt="фото Михаил Ермаков" width="270" />
-              <div class="index-h3-p-member-of-team-div">
-                <h3 class="index-h3-member-of-team">Михаил Ермаков</h3>
-                <p class="index-p-member-of-team">UI Designer</p>
-                <ul class="index-member-of-team-ul-links list">
-                  <li class="index-member-of-team-li-links">
-                    <a href="" class="team-links">
-                      <svg class="index-member-of-team-svg-links">
+              <div class="team__div">
+                <h3 class="team__h3">Михаил Ермаков</h3>
+                <p class="team__p">UI Designer</p>
+                <ul class="team__cardset">
+                  <li class="team__item">
+                    <a href="" class="team__link">
+                      <svg class="team__svg">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="index-member-of-team-li-links">
-                    <a href="" class="team-links">
-                      <svg class="index-member-of-team-svg-links">
+                  <li class="team__item">
+                    <a href="" class="team__link">
+                      <svg class="team__svg">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="index-member-of-team-li-links">
-                    <a href="" class="team-links">
-                      <svg class="index-member-of-team-svg-links">
+                  <li class="team__item">
+                    <a href="" class="team__link">
+                      <svg class="team__svg">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="index-member-of-team-li-links">
-                    <a href="" class="team-links">
-                      <svg class="index-member-of-team-svg-links">
+                  <li class="team__item">
+                    <a href="" class="team__link">
+                      <svg class="team__svg">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
