--- a/index.html
+++ b/index.html
@@ -21,15 +21,17 @@
     <header class="header">
       <div class="header__container">
         <nav class="header__nav">
-          <a href="" class="header__logo"
-            ><span class="header__logo header__logo--accent-color">Web</span>Studio</a
+          <a href="" class="logo"
+            ><span class="logo logo--accent-color">Web</span>Studio</a
           >
           <ul class="header__menu">
             <li class="header__li">
               <a href="./index.html" class="header__current header__current--color">Студия</a>
             </li>
             <li class="header__li">
-              <a href="./portfolio.html" class="header__current">Портфолио</a>
+              <a href="./portfolio.html" class="header__current"
+                >Портфолио</a
+              >
             </li>
             <li class="header__li">
               <a href="" class="header__current">Контакты</a>
@@ -351,96 +353,96 @@
       </section>
       <section class="section">
         <div class="container">
-          <h2 class="clients-h2">Постоянные клиенты</h2>
-          <ul class="clients-ul list">
-            <li class="clients-li">
-              <a href="" class="clients-li-a"
-                ><svg class="clients-li-a-svg"><use href="./images/icons.svg#icon-logo1"></use></svg
+          <h2 class="clients__h2">Постоянные клиенты</h2>
+          <ul class="clients__ul">
+            <li class="clients__li">
+              <a href="" class="clients__links"
+                ><svg class="clients__svg"><use href="./images/icons.svg#icon-logo1"></use></svg
               ></a>
             </li>
-            <li class="clients-li">
-              <a href="" class="clients-li-a"
-                ><svg class="clients-li-a-svg"><use href="./images/icons.svg#icon-logo2"></use></svg
+            <li class="clients__li">
+              <a href="" class="clients__links"
+                ><svg class="clients__svg"><use href="./images/icons.svg#icon-logo2"></use></svg
               ></a>
             </li>
-            <li class="clients-li">
-              <a href="" class="clients-li-a"
-                ><svg class="clients-li-a-svg"><use href="./images/icons.svg#icon-logo3"></use></svg
+            <li class="clients__li">
+              <a href="" class="clients__links"
+                ><svg class="clients__svg"><use href="./images/icons.svg#icon-logo3"></use></svg
               ></a>
             </li>
-            <li class="clients-li">
-              <a href="" class="clients-li-a"
-                ><svg class="clients-li-a-svg"><use href="./images/icons.svg#icon-logo4"></use></svg
+            <li class="clients__li">
+              <a href="" class="clients__links"
+                ><svg class="clients__svg"><use href="./images/icons.svg#icon-logo4"></use></svg
               ></a>
             </li>
-            <li class="clients-li">
-              <a href="" class="clients-li-a"
-                ><svg class="clients-li-a-svg"><use href="./images/icons.svg#icon-logo5"></use></svg
+            <li class="clients__li">
+              <a href="" class="clients__links"
+                ><svg class="clients__svg"><use href="./images/icons.svg#icon-logo5"></use></svg
               ></a>
             </li>
-            <li class="clients-li">
-              <a href="" class="clients-li-a"
-                ><svg class="clients-li-a-svg"><use href="./images/icons.svg#icon-logo6"></use></svg
+            <li class="clients__li">
+              <a href="" class="clients__links"
+                ><svg class="clients__svg"><use href="./images/icons.svg#icon-logo6"></use></svg
               ></a>
             </li>
           </ul>
         </div>
       </section>
     </main>
-    <footer class="footer-wrapper">
-      <div class="container-footer">
-        <div class="footer-logo-address-container">
-          <a href="" class="header__logo header__logo--inverse"
-            ><span class="header__logo header__logo--accent-color">Web</span>Studio</a
+   <footer class="footer__wrapper">
+      <div class="footer__container">
+        <div class="footer__logo">
+          <a href="" class="logo logo--inverse"
+            ><span class="logo logo--accent-color">Web</span>Studio</a
           >
-          <address class="footer-address">
-            <p class="link footer-address-p">г. Киев, пр-т Леси Украинки, 26</p>
+          <address class="footer__address">
+            <p class="footer__p">г. Киев, пр-т Леси Украинки, 26</p>
             <ul class="list">
-              <li class="footer-address-li">
-                <a href="mailto:info@devstudio.com" class="link footer-link">info@devstudio.com</a>
+              <li class="footer__item">
+                <a href="mailto:info@devstudio.com" class="footer__href">info@devstudio.com</a>
               </li>
-              <li class="footer-address-li">
-                <a href="tel:+380961111111" class="link footer-link">+38 096 111 11 11</a>
+              <li class="footer__item">
+                <a href="tel:+380961111111" class="footer__href">+38 096 111 11 11</a>
               </li>
             </ul>
           </address>
         </div>
-        <div class="footer-wrapper-join">
-          <p class="footer-p-join">присоединяйтесь</p>
-          <ul class="list footer-ul-join">
-            <li class="footer-li-join">
-              <a href="" class="footer-a-join"
-                ><svg class="footer-a-join-svg">
+        <div class="footer__join">
+          <p class="footer__invite">присоединяйтесь</p>
+          <ul class="footer__catalogue">
+            <li class="footer__unit">
+              <a href="" class="footer__link"
+                ><svg class="footer__svg">
                   <use href="./images/icons.svg#icon-instagram"></use></svg
               ></a>
             </li>
-            <li class="footer-li-join">
-              <a href="" class="footer-a-join"
-                ><svg class="footer-a-join-svg">
+            <li class="footer__unit">
+              <a href="" class="footer__link"
+                ><svg class="footer__svg">
                   <use href="./images/icons.svg#icon-twitter"></use></svg
               ></a>
             </li>
-            <li class="footer-li-join">
-              <a href="" class="footer-a-join"
-                ><svg class="footer-a-join-svg">
+            <li class="footer__unit">
+              <a href="" class="footer__link"
+                ><svg class="footer__svg">
                   <use href="./images/icons.svg#icon-facebook"></use></svg
               ></a>
             </li>
-            <li class="footer-li-join">
-              <a href="" class="footer-a-join"
-                ><svg class="footer-a-join-svg">
+            <li class="footer__unit">
+              <a href="" class="footer__link"
+                ><svg class="footer__svg">
                   <use href="./images/icons.svg#icon-linkedin"></use></svg
               ></a>
             </li>
           </ul>
         </div>
-        <div class="footer-submit-div">
-          <p class="footer-submit-p">Подпишитесь на рассылку</p>
-          <div class="footer-input-button-div">
-            <input type="text" placeholder="E-mail" class="footer-input" />
-            <button type="submit" class="footer-submit-button">
-              <span class="footer-submit-button-span">Подписаться</span>
-              <svg class="footer-submit-svg"><use href="./images/icons.svg#icon-send"></use></svg>
+        <div class="footer__inner">
+          <p class="footer__passage">Подпишитесь на рассылку</p>
+          <div class="footer__inside">
+            <input type="text" placeholder="E-mail" class="footer__input" />
+            <button type="submit" class="footer__button">
+              <span class="footer__submit">Подписаться</span>
+              <svg class="footer__icon"><use href="./images/icons.svg#icon-send"></use></svg>
             </button>
           </div>
         </div>
