--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,8 @@
     <header class="header">
       <div class="header__container">
         <nav class="header__nav">
-          <a href="" class="header__logo"
-            ><span class="header__logo header__logo--accent-color">Web</span>Studio</a
+          <a href="" class="logo"
+            ><span class="logo logo--accent-color">Web</span>Studio</a
           >
           <ul class="header__menu">
             <li class="header__li">
@@ -59,189 +59,188 @@
     <main>
       <section class="section">
         <div class="container">
-          <ul class="list ul-button">
-            <li class="li-button"><button type="button" class="button link all">Все</button></li>
-            <li class="li-button">
-              <button type="button" class="button link web-sites">Веб-сайты</button>
+          <ul class="buttons__ul">
+            <li class="buttons__li"><button type="button" class="buttons">Все</button></li>
+            <li class="buttons__li">
+              <button type="button" class="buttons">Веб-сайты</button>
             </li>
-            <li class="li-button">
-              <button type="button" class="button link applications">Приложения</button>
+            <li class="buttons__li">
+              <button type="button" class="buttons">Приложения</button>
             </li>
-            <li class="li-button">
-              <button type="button" class="button link design">Дизайн</button>
+            <li class="buttons__li">
+              <button type="button" class="buttons">Дизайн</button>
             </li>
-            <li class="li-button">
-              <button type="button" class="button link marketing">Маркетинг</button>
+            <li class="buttons__li">
+              <button type="button" class="buttons">Маркетинг</button>
             </li>
           </ul>
           <h2 class="visually-hidden">Наши портфолио</h2>
-          <ul class="list portfolio-ul">
-            <li class="portfolio-ul-li">
-              <a class="link portfolio-a" href="">
+          <ul class="portfolio__ul">
+            <li class="portfolio__li">
+              <a class="portfolio__links" href="">
                 <img
                   src="./images/portfolio/techcrack.jpg"
                   alt="Технокряк"
                   width="370"
-                  class="portfolio-img"
                 />
-                <div class="portfolio-img-div">
-                  <p class="portfolio-img-div-p">
+                <div class="portfolio__div">
+                  <p class="portfolio__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
                   </p>
                 </div>
-                <div class="portfolio-h3-p">
-                  <h3 class="portfolio-h3">Технокряк</h3>
-                  <p class="portfolio-p">Веб-сайт</p>
+                <div class="portfolio__wrapper">
+                  <h3 class="portfolio__h3">Технокряк</h3>
+                  <p class="portfolio__p">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-ul-li">
-              <a class="link portfolio-a" href="">
+            <li class="portfolio__li">
+              <a class="portfolio__links" href="">
                 <img
                   src="./images/portfolio/poster-new-orlean-vs-golden-star.jpg"
                   alt="Постер New Orlean vs Golden Star"
                   width="370"
                 />
-                <div class="portfolio-img-div">
-                  <p class="portfolio-img-div-p">
+                <div class="portfolio__div">
+                  <p class="portfolio__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
                   </p>
                 </div>
-                <div class="portfolio-h3-p">
-                  <h3 class="portfolio-h3">Постер New Orlean vs Golden Star</h3>
-                  <p class="portfolio-p">Дизайн</p>
+                <div class="portfolio__wrapper">
+                  <h3 class="portfolio__h3">Постер New Orlean vs Golden Star</h3>
+                  <p class="portfolio__p">Дизайн</p>
                 </div></a
               >
             </li>
-            <li class="portfolio-ul-li">
-              <a class="link portfolio-a" href="">
+            <li class="portfolio__li">
+              <a class="portfolio__links" href="">
                 <img
                   src="./images/portfolio/restaurant-seafood.jpg"
                   alt="Ресторан Seafood"
                   width="370"
                 />
-                <div class="portfolio-img-div">
-                  <p class="portfolio-img-div-p">
+                <div class="portfolio__div">
+                  <p class="portfolio__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
                   </p>
                 </div>
-                <div class="portfolio-h3-p">
-                  <h3 class="portfolio-h3">Ресторан Seafood</h3>
-                  <p class="portfolio-p">Приложение</p>
+                <div class="portfolio__wrapper">
+                  <h3 class="portfolio__h3">Ресторан Seafood</h3>
+                  <p class="portfolio__p">Приложение</p>
                 </div></a
               >
             </li>
-            <li class="portfolio-ul-li">
-              <a class="link portfolio-a" href="">
+            <li class="portfolio__li">
+              <a class="portfolio__links" href="">
                 <img src="./images/portfolio/project-prime.jpg" alt="Проект Prime" width="370" />
-                <div class="portfolio-img-div">
-                  <p class="portfolio-img-div-p">
+                <div class="portfolio__div">
+                  <p class="portfolio__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
                   </p>
                 </div>
-                <div class="portfolio-h3-p">
-                  <h3 class="portfolio-h3">Проект Prime</h3>
-                  <p class="portfolio-p">Маркетинг</p>
+                <div class="portfolio__wrapper">
+                  <h3 class="portfolio__h3">Проект Prime</h3>
+                  <p class="portfolio__p">Маркетинг</p>
                 </div></a
               >
             </li>
-            <li class="portfolio-ul-li">
-              <a class="link portfolio-a" href="">
+            <li class="portfolio__li">
+              <a class="portfolio__links" href="">
                 <img src="./images/portfolio/project-boxes.jpg" alt="Проект Boxes" width="370" />
-                <div class="portfolio-img-div">
-                  <p class="portfolio-img-div-p">
+                <div class="portfolio__div">
+                  <p class="portfolio__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
                   </p>
                 </div>
-                <div class="portfolio-h3-p">
-                  <h3 class="portfolio-h3">Проект Boxes</h3>
-                  <p class="portfolio-p">Приложение</p>
+                <div class="portfolio__wrapper">
+                  <h3 class="portfolio__h3">Проект Boxes</h3>
+                  <p class="portfolio__p">Приложение</p>
                 </div></a
               >
             </li>
-            <li class="portfolio-ul-li">
-              <a class="link portfolio-a" href="">
+            <li class="portfolio__li">
+              <a class="portfolio__links" href="">
                 <img
                   src="./images/portfolio/inspiration-has-no-borders.jpg"
                   alt="Inspiration has no Borders"
                   width="370"
                 />
-                <div class="portfolio-img-div">
-                  <p class="portfolio-img-div-p">
+                <div class="portfolio__div">
+                  <p class="portfolio__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
                   </p>
                 </div>
-                <div class="portfolio-h3-p">
-                  <h3 class="portfolio-h3">Inspiration has no Borders</h3>
-                  <p class="portfolio-p">Веб-сайт</p>
+                <div class="portfolio__wrapper">
+                  <h3 class="portfolio__h3">Inspiration has no Borders</h3>
+                  <p class="portfolio__p">Веб-сайт</p>
                 </div></a
               >
             </li>
-            <li class="portfolio-ul-li">
-              <a class="link portfolio-a" href="">
+            <li class="portfolio__li">
+              <a class="portfolio__links" href="">
                 <img
                   src="./images/portfolio/publishment-limited-edition.jpg"
                   alt="Издание Limited Edition"
                   width="370"
                 />
-                <div class="portfolio-img-div">
-                  <p class="portfolio-img-div-p">
+                <div class="portfolio__div">
+                  <p class="portfolio__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
                   </p>
                 </div>
-                <div class="portfolio-h3-p">
-                  <h3 class="portfolio-h3">Издание Limited Edition</h3>
-                  <p class="portfolio-p">Дизайн</p>
+                <div class="portfolio__wrapper">
+                  <h3 class="portfolio__h3">Издание Limited Edition</h3>
+                  <p class="portfolio__p">Дизайн</p>
                 </div></a
               >
             </li>
-            <li class="portfolio-ul-li">
-              <a class="link portfolio-a" href="">
+            <li class="portfolio__li">
+              <a class="portfolio__links" href="">
                 <img src="./images/portfolio/project-LAB.jpg" alt="Проект LAB" width="370" />
-                <div class="portfolio-img-div">
-                  <p class="portfolio-img-div-p">
+                <div class="portfolio__div">
+                  <p class="portfolio__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
                   </p>
                 </div>
-                <div class="portfolio-h3-p">
-                  <h3 class="portfolio-h3">Проект LAB</h3>
-                  <p class="portfolio-p">Маркетинг</p>
+                <div class="portfolio__wrapper">
+                  <h3 class="portfolio__h3">Проект LAB</h3>
+                  <p class="portfolio__p">Маркетинг</p>
                 </div></a
               >
             </li>
-            <li class="portfolio-ul-li">
-              <a class="link portfolio-a" href="">
+            <li class="portfolio__li">
+              <a class="portfolio__links" href="">
                 <img
                   src="./images/portfolio/growing-business.jpg"
                   alt="Growing Business"
                   width="370"
                 />
-                <div class="portfolio-img-div">
-                  <p class="portfolio-img-div-p">
+                <div class="portfolio__div">
+                  <p class="portfolio__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
                   </p>
                 </div>
-                <div class="portfolio-h3-p">
-                  <h3 class="portfolio-h3">Growing Business</h3>
-                  <p class="portfolio-p">Приложение</p>
+                <div class="portfolio__wrapper">
+                  <h3 class="portfolio__h3">Growing Business</h3>
+                  <p class="portfolio__p">Приложение</p>
                 </div></a
               >
             </li>
@@ -249,60 +248,60 @@
         </div>
       </section>
     </main>
-    <footer class="footer-wrapper">
-      <div class="container-footer">
-        <div class="footer-logo-address-container">
-          <a href="" class="logo link logo-footer"
-            ><span class="logo-accent-color">Web</span>Studio</a
+    <footer class="footer__wrapper">
+      <div class="footer__container">
+        <div class="footer__logo">
+          <a href="" class="logo logo--inverse"
+            ><span class="logo logo--accent-color">Web</span>Studio</a
           >
-          <address class="footer-address">
-            <p class="link footer-address-p">г. Киев, пр-т Леси Украинки, 26</p>
+          <address class="footer__address">
+            <p class="footer__p">г. Киев, пр-т Леси Украинки, 26</p>
             <ul class="list">
-              <li class="footer-address-li">
-                <a href="mailto:info@devstudio.com" class="link footer-link">info@devstudio.com</a>
+              <li class="footer__item">
+                <a href="mailto:info@devstudio.com" class="footer__href">info@devstudio.com</a>
               </li>
-              <li class="footer-address-li">
-                <a href="tel:+380961111111" class="link footer-link">+38 096 111 11 11</a>
+              <li class="footer__item">
+                <a href="tel:+380961111111" class="footer__href">+38 096 111 11 11</a>
               </li>
             </ul>
           </address>
         </div>
-        <div class="footer-wrapper-join">
-          <p class="footer-p-join">присоединяйтесь</p>
-          <ul class="list footer-ul-join">
-            <li class="footer-li-join">
-              <a href="" class="footer-a-join"
-                ><svg class="footer-a-join-svg">
+        <div class="footer__join">
+          <p class="footer__invite">присоединяйтесь</p>
+          <ul class="footer__catalogue">
+            <li class="footer__unit">
+              <a href="" class="footer__link"
+                ><svg class="footer__svg">
                   <use href="./images/icons.svg#icon-instagram"></use></svg
               ></a>
             </li>
-            <li class="footer-li-join">
-              <a href="" class="footer-a-join"
-                ><svg class="footer-a-join-svg">
+            <li class="footer__unit">
+              <a href="" class="footer__link"
+                ><svg class="footer__svg">
                   <use href="./images/icons.svg#icon-twitter"></use></svg
               ></a>
             </li>
-            <li class="footer-li-join">
-              <a href="" class="footer-a-join"
-                ><svg class="footer-a-join-svg">
+            <li class="footer__unit">
+              <a href="" class="footer__link"
+                ><svg class="footer__svg">
                   <use href="./images/icons.svg#icon-facebook"></use></svg
               ></a>
             </li>
-            <li class="footer-li-join">
-              <a href="" class="footer-a-join"
-                ><svg class="footer-a-join-svg">
+            <li class="footer__unit">
+              <a href="" class="footer__link"
+                ><svg class="footer__svg">
                   <use href="./images/icons.svg#icon-linkedin"></use></svg
               ></a>
             </li>
           </ul>
         </div>
-        <div class="footer-submit-div">
-          <p class="footer-submit-p">Подпишитесь на рассылку</p>
-          <div class="footer-input-button-div">
-            <input type="text" placeholder="E-mail" class="footer-input" />
-            <button type="submit" class="footer-submit-button">
-              <span class="footer-submit-button-span">Подписаться</span>
-              <svg class="footer-submit-svg"><use href="./images/icons.svg#icon-send"></use></svg>
+        <div class="footer__inner">
+          <p class="footer__passage">Подпишитесь на рассылку</p>
+          <div class="footer__inside">
+            <input type="text" placeholder="E-mail" class="footer__input" />
+            <button type="submit" class="footer__button">
+              <span class="footer__submit">Подписаться</span>
+              <svg class="footer__icon"><use href="./images/icons.svg#icon-send"></use></svg>
             </button>
           </div>
         </div>
