--- a/portfolio.html
+++ b/portfolio.html
@@ -256,7 +256,7 @@
           >
           <address class="footer__address">
             <p class="footer__p">г. Киев, пр-т Леси Украинки, 26</p>
-            <ul class="list">
+            <ul class="footer__list">
               <li class="footer__item">
                 <a href="mailto:info@devstudio.com" class="footer__href">info@devstudio.com</a>
               </li>
